--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <p>Proposed Timelock Usage</p>
 <h3 id="goal-to-be-achieved-by-template">Goal to be achieved by template</h3>
 <p>A 3-of-3 that turns into a 2-of-3 after 90 days</p>
-<p><code>&nbsp;&nbsp;&nbsp;NOTE:&nbsp;144&nbsp;blocks&nbsp;per&nbsp;day&nbsp;x&nbsp;90&nbsp;days&nbsp;=&nbsp;12960&nbsp;blocks</code></p>
+<p><code>   NOTE: 144 blocks per day x 90 days = 12960 blocks</code></p>
 <h3 id="miniscript-policy">Miniscript Policy</h3>
 <p>Input:</p>
 <pre><code>thresh(3, pk(key_1), pk(key_2), pk(key_3), older(12960))</code></pre>
@@ -67,7 +67,7 @@ OP_ELSE
 OP_ENDIF
 OP_ADD 3 OP_EQUAL</code></pre>
 <p><a href="https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769">testnet tx</a></p>
-<p><code>&nbsp;&nbsp;&nbsp;</code><a href="https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769"><code>https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769</code></a></p>
+<p><code>   </code><a href="https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769"><code>https://mempool.space/testnet/tx/13a204ec065f76878ee1f59f79b3eb2cea2b3fda4d8938e6cfa6a8394d090769</code></a></p>
 <h3 id="additional-links">Additional Links</h3>
 <p><a href="https://github.com/sipa/miniscript/blob/master/bitcoin/script/miniscript.h">usage example</a></p>
 <h3 id="additional-resources">Additional Resources</h3>
