.github/workflows/build.yml
index.html

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <table>
 <thead>
 <tr class="header">
-<th><a href="MinT-000.html">MinT-000</a></th>
-<th><a href="MinT-001.html">MinT-001</a></th>
-<th><a href="MinT-002.html">MinT-002</a></th>
-<th><a href="MinT-003.html">MinT-003</a></th>
-<th><a href="MinT-004.html">MinT-004</a></th>
+<th><a href="MinT-000.md">MinT-000</a></th>
+<th><a href="MinT-001.md">MinT-001</a></th>
+<th><a href="MinT-002.md">MinT-002</a></th>
+<th><a href="MinT-003.md">MinT-003</a></th>
+<th><a href="MinT-004.md">MinT-004</a></th>
 </tr>
 </thead>
 <tbody>
@@ -16,11 +16,11 @@
 <table>
 <thead>
 <tr class="header">
-<th><a href="MinT-999.html">MinT-999</a></th>
-<th><a href="MinTT-999.html">MinTT-999</a></th>
-<th><a href="MinTT-9999.html">MinTT-9999</a></th>
-<th><a href="MinTT-9999.html">MinTT-9999</a></th>
-<th><a href="MinTT-9999.html">MinTT-9999</a></th>
+<th><a href="MinT-999.md">MinT-999</a></th>
+<th><a href="MinTT-999.md">MinTT-999</a></th>
+<th><a href="MinTT-9999.md">MinTT-9999</a></th>
+<th><a href="MinTT-9999.md">MinTT-9999</a></th>
+<th><a href="MinTT-9999.md">MinTT-9999</a></th>
 </tr>
 </thead>
 <tbody>
